<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".EditingItem">

    <TextView
        android:id="@+id/productNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:textColor="@color/teal_700"
        android:textSize="35sp"
        tools:text="Product Name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/brandTVEdit"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="Brand"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/brandNameEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/brand_of_the_product"
            tools:text="Brand Name"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/InStockTVEdit"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="In Stock"
            tools:ignore="HardcodedText"/>

        <EditText
            android:id="@+id/inStockEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/in_stock"
            tools:text="YES"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/WeightTVEdit"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="Weight"
            tools:ignore="HardcodedText"/>

        <EditText
            android:id="@+id/weightEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/write_yes_or_no"
            tools:text="500"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/PriceTVEdit"
            android:padding="8dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="Price"
            tools:ignore="HardcodedText"/>

        <EditText
            android:id="@+id/priceEdit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number"
            tools:text="500"
            tools:ignore="Autofill,TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/update"
        tools:ignore="UnusedAttribute" />


</androidx.appcompat.widget.LinearLayoutCompat>